# comandante_cam

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_CHEATSHEET.md  DECISION_LOG.md  DEPLOYMENT.md  SESSION_PROMPTS.md  SPEC.md  deploy.sh  docker-compose.cameras.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4187467d1edf_initial_schema.py  a0b1c2d3e4f5_add_osd_fields_to_camera.py  a1b2c3d4e5f6_add_equipment_table.py  c3d4e5f6a7b8_add_floor_plan_tables.py  e7f8a9b0c1d2_add_storage_targets_table.py  f1a2b3c4d5e6_allow_hostname_in_camera_ip_address.py
backend/app/: celery_app.py  config.py  database.py  main.py  redis_client.py
backend/app/core/: constants.py  exceptions.py  logging.py
backend/app/middleware/: audit.py  auth.py  rate_limit.py  request_id.py  security_headers.py
backend/app/models/: __init__.py  alert_event.py  alert_rule.py  api_key.py  audit_log.py  building.py  camera.py  camera_group.py  camera_permission.py  camera_placement.py  detection_zone.py  equipment.py  export_job.py  floor.py  notification_channel.py  recording_schedule.py  recording_segment.py  role.py  session.py  storage_target.py  system_event.py  user.py
backend/requirements/: base.txt  dev.txt
backend/scripts/: backup_db.sh  generate_keys.py  seed_roles.py
backend/tests/: conftest.py
detection_service/: Dockerfile  config_watcher.py  detector.py  frame_buffer.py  health_server.py  main.py  pyproject.toml  redis_publisher.py  rules_engine.py  tracker.py  zone_filter.py
detection_service/tests/: conftest.py  test_rules_engine.py  test_tracker.py  test_zone_filter.py
(+138 files in other folders)
