[project]
name = "nvr-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "pydantic-settings==2.2.1",
    "pydantic[email]==2.7.1",
    "python-jose[cryptography]==3.3.0",
    "argon2-cffi==23.1.0",
    "cryptography==42.0.5",
    "celery[redis]==5.4.0",
    "celery-redbeat==2.2.0",
    "redis==5.0.4",
    "structlog==24.1.0",
    "httpx==0.27.0",
    "onvif-zeep==0.2.12",
    "wsdiscovery>=2.1",
    "pyotp==2.9.0",
    "slowapi==0.1.9",
    "pyzipper==0.3.6",
    "qrcode[pil]==7.4.2",
    "psycopg2-binary==2.9.9",
    "prometheus-client>=0.20",
    "asyncssh==2.14.2",
    "docker==7.1.0",
    "gunicorn==22.0.0",
]

[dependency-groups]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "factory-boy==3.3.0",
    "faker==25.0.0",
    "freezegun==1.5.0",
    "fakeredis==2.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
