[project]
name = "nvr-detection"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "numpy<2.0",
    "ultralytics==8.3.50",
    "opencv-python-headless==4.9.0.80",
    "redis==5.0.4",
    "shapely==2.0.4",
    "supervision==0.20.0",
    "structlog==24.1.0",
    "pytest==8.2.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
